--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <title> NeoLuna Sign-Up </title>
         <meta charset="utf-8">
         <link rel="stylesheet" media="screen" href="css/meyers_and_normalize-form_reset.css">
         <link rel="stylesheet" media="screen" href="css/style.css">
