--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
         <br> <br>
         <div class="inp-box">
-          <form name="form1" action="/action_page.php" method="get">
+          <form name="form1" action="/action_page.php" method="get" autocomplete="on">
               <label for="firstnm"> First Name:</label>
               <input type="text" id="firstnm" name="firstnm" placeholder=""> <br> <br>
               <label for="lastnm"> Last Name:</label>
