changed submit value

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               <input type="number" id="userage" name="userage" min="13" max="65"> <br> <br>
               <label for="email"> Email: </label>
               <input type="text" id="email" name="email" placeholder=""> <br> <br>
-              <input type="button" value="Submit">
+              <input type="button" value="Sign Me Up!">
           </form>
             <br>
           <p>By submitting this form, you are agreeing to our <a href="#"> Terms and Conditions</a> and <a href="#"> Privacy Policy</a> </p>
