added new button type + changed form action

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
         <br> <br>
         <div class="inp-box">
-          <form name="form1" action="/action_page.php" method="get" autocomplete="on">
+          <form name="form1" action="#null" method="get" autocomplete="on">
               <label for="firstnm"> First Name:</label>
               <input type="text" id="firstnm" name="firstnm" placeholder=""> <br> <br>
               <label for="lastnm"> Last Name:</label>
@@ -38,7 +38,7 @@
               <input type="number" id="userage" name="userage" min="13" max="65"> <br> <br>
               <label for="email"> Email: </label>
               <input type="text" id="email" name="email" placeholder=""> <br> <br>
-              <input type="button" value="Sign Me Up!">
+              <input name ="button" type="submit" value="Sign Me Up!">
           </form>
             <br>
           <p>By submitting this form, you are agreeing to our <a href="#"> Terms and Conditions</a> and <a href="#"> Privacy Policy</a> </p>
